--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Task</h1>
+<h1 class="p-4">New Task</h1>
 
 <%= form_with model: @task do |f| %>
   <%= f.label :title %>
@@ -8,4 +8,4 @@
   <%= f.submit "Create Task" %>
 <% end %>
 
-<p><%= link_to 'Back to list', tasks_path %></p>
+<p><%= link_to 'Back to list', tasks_path, class: "btn btn-outline-primary text-decoration-none" %></p>
